--- a/bouncing_air/index.html
+++ b/bouncing_air/index.html
@@ -2,6 +2,7 @@
 <head>
 <meta charset="utf-8">
 <title>Bouncing Air</title>
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <style>
 html, body, canvas {
     margin: 0;
