--- a/bouncing_air/index.html
+++ b/bouncing_air/index.html
@@ -3,12 +3,10 @@
 <meta charset="utf-8">
 <title>Bouncing Air</title>
 <style>
-html, body {
+html, body, canvas {
     margin: 0;
-    padding: 5px;
-}
-#canvas {
-    border: 1px solid black;
+    padding: 0;
+    overflow: hidden;
 }
 </style>
 </head>
