--- a/bouncing_air/index.html
+++ b/bouncing_air/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <link href="../lib/c3/c3.min.css" rel="stylesheet" type="text/css">
 <style>
-html, body, canvas {
+html, body, #canvas {
     margin: 0;
     padding: 0;
     overflow: hidden;
@@ -22,10 +22,10 @@ html, body, canvas {
 </style>
 </head>
 <body>
-<canvas id="canvas"></canvas>
+<div id="canvas"></div>
 <div id="chart"></div>
-<script src="../lib/randomColor.min.js"></script>
 <script src="../lib/d3/d3.min.js" charset="utf-8"></script>
 <script src="../lib/c3/c3.min.js"></script>
+<script src="../lib/pixi.min.js"></script>
 <script src="air.js"></script>
 </body>
