move randomcolor.js to lib/

--- a/bouncing_air/index.html
+++ b/bouncing_air/index.html
@@ -24,7 +24,7 @@ html, body, canvas {
 <body>
 <canvas id="canvas"></canvas>
 <div id="chart"></div>
-<script src="randomColor.min.js"></script>
+<script src="../lib/randomColor.min.js"></script>
 <script src="../lib/d3/d3.min.js" charset="utf-8"></script>
 <script src="../lib/c3/c3.min.js"></script>
 <script src="air.js"></script>
