distribution: line distribution

--- a/physics/distribution/index.html
+++ b/physics/distribution/index.html
@@ -33,6 +33,7 @@ html, body, #canvas {
 <div id="chart" class="info-box"></div>
 <div id="buttons" class="info-box">
     <button onclick="init_random();">Random</button>
+    <button onclick="init_line();">Line</button>
 </div>
 <script src="../../lib/d3/d3.min.js" charset="utf-8"></script>
 <script src="../../lib/c3/c3.min.js"></script>
