--- a/physics/distribution/index.html
+++ b/physics/distribution/index.html
@@ -34,6 +34,8 @@ html, body, #canvas {
 <div id="buttons" class="info-box">
     <button onclick="init_random();">Random</button>
     <button onclick="init_line();">Line</button>
+    <button onclick="init_circle();">Circle</button>
+    <button onclick="init_circle2();">Circle2</button>
 </div>
 <script src="../../lib/d3/d3.min.js" charset="utf-8"></script>
 <script src="../../lib/c3/c3.min.js"></script>
