--- a/physics/atwood/index.html
+++ b/physics/atwood/index.html
@@ -8,16 +8,68 @@
 html, body {
     margin: 0;
     padding: 0;
+    min-height: 100%;
+    min-width: 100%;
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+}
+
+h3 {
+    font-family: monospace;
+    font-size: 10px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+button {
+    font-family: monospace;
+}
+
+ul {
+    margin-top: 3px;
+}
+
+#toolbox {
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 200px;
 }
 </style>
 </head>
 <body>
-<canvas id="myCanvas"  width="1200" height="1200"></canvas>
+
+<canvas id="myCanvas"></canvas>
+<div id="toolbox">
+    <h3>Presets</h3>
+    <ul>
+        <li><button onclick="AtWood(2, 1, Math.PI/2);">μ = 2, θ = 90°</button></li>
+        <li><button onclick="AtWood(16, 1, Math.PI/2);">μ = 16, θ = 90°</button></li>
+    </ul>
+
+    <h3>Custom</h3>
+    <ul>
+        <li>μ <input id="custom-mu" type="text"></li>
+        <li>θ <input id="custom-theta" type="theta"></li>
+        <li><button onclick="AtWood($('custom-mu').value, 1, $('custom-theta').value / 180 * Math.PI);">run</button></li>
+    </ul>
+
+    <h3>Speed</h3>
+    <div><input id="speed-slider" type="range" min="0.01" max="0.05" step="0.001" value="0.01" oninput="set_demo_speed();"></div>
+</div>
+
 <script src="../../lib/runge_kutta.js"></script>
 <script src="../../lib/paper/paper-full.min.js"></script>
 <script>
+function $(x) { return document.getElementById(x); }
+
+var canvas = document.getElementById('myCanvas');
+canvas.width = window.innerWidth;
+canvas.height = window.innerHeight;
 paper.install(window);
 paper.setup(document.getElementById('myCanvas'));
+var demo_speed = 0.01;
 </script>
 <script src="atwood.js"></script>
 </body>
